hphp/hack/test/typecheck/readonly/collection_append.php.exp
File "collection_append.php", line 11, characters 10-27:
This expression is readonly, but the collection you're modifying is mutable, which isn't allowed. (Parsing[1002])
File "collection_append.php", line 19, characters 3-9:
This value is readonly, its properties cannot be modified (Typing[4409])
File "collection_append.php", line 11, characters 3-6:
Invalid collection modification (Typing[4411])
  File "collection_append.php", line 11, characters 10-27:
  This expression is readonly
  File "collection_append.php", line 11, characters 3-4:
  But this value is mutable
